Redis caching, CORS and Kafka update